# librephone

./: .gitignore  .gitmodules  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  images_util.sh  mkdocs.yml  pyproject.toml  qdsp6-mdt-merge.md  reproduce_vuln.py  test_sql.py
.github/workflows/: main.yml  sync.yml
.jules/: sentinel.md
data/: binfiles_devices.csv  builds.csv  contains-binaries.csv  count.csv  devices-22.2.csv.bz2  devices-22.2.sql.bz2  devices.csv  devices.sql.bz2  sizes-22.2.csv.bz2  sizes.csv  sort-totals.csv  totals.csv  track.csv
docs/: CopyEngine.md  ath11k.md  builds.md  comparing.md  csv2md.py  csvdata.md  extractor.md  files.md  flashing.md  ftm.md  generator.md  hif.md  htt.md  images_util.md  import-device.md  index.md  other.md  query-device.md  stubs.md  thumb.md  tools.md  totals.md  track.md  utilities.md  wifi-driver-interface.md  wifi.md  wireless.md  wpss.b01.md  wpss.b02.md  wpss.b03.md  wpss.b04.md  wpss.b05.md  wpss.b06.md  wpss.b07.md  wpss.b08.md  wpss.b09.md  wpss.b10.md  wpss.b12.md
examples/: machina.yaml  run_build.sh  simple_arm_build.py
librephone/: Makefile  __version__.py  device.py  device_files.py  devices.lst  extractor.py  generator.py  import_dev.py  mdttool.py  partitions.yaml  query_dev.py  tabledefs.py  tabledefs.sql  tabledefs.yaml  typedefs.py  typedefs.sql  typedefs.yaml  update_dev.py  yamlfile.py
librephone/machina/: __init__.py  cli.py
librephone/machina/conf/: __init__.py  config.py  loader.py
librephone/machina/core/: __init__.py  context.py  engine.py  task.py
librephone/machina/layers/: __init__.py  kernel.py  layer.py
librephone/machina/targets/: __init__.py  arm.py  target.py
tests/: conftest.py  test_device_files.py  test_extractor.py  test_extractor_security.py  test_generic.py  test_ios_support.py  test_machina_conf.py  test_machina_core.py  test_machina_layers.py  test_security_deps.py  test_sql_safety.py
tests/librephone/: __init__.py  test_dependency_tracer.py  test_htt_protocol.py  test_mbn_parser.py  test_mdttool.py  test_tlv_decoder.py
tools/: __init__.py
tools/librephone/: __init__.py  dependency_tracer.py  htt_protocol.py  mbn_parser.py  tlv_decoder.py
